Invoice fn changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "JWTSettings": {
+    "ValidIssuer": "https://localhost:44307",
+    "ValidAudience": "http://localhost:3000",
+    "Secret": "GrowVizoroz@12345678900987654321!",
+    "MinutesToExpiration": "60"
+  },
   "AllowedHosts": "*",
   "Azure": {
     "FormRecognizerEndpoint": "https://invoicegenerator.cognitiveservices.azure.com/",
